# Solvent

./: .gitignore  ARCHITECTURE.md  Available balance_ $1000000.eml  Cargo.toml  DEPLOYMENT.md  Emin Karagoz.eml  README.md  Reserve statement (2).eml  Reserve statement.eml
.github/: RELEASE_NOTES_v0.1.0.md
.github/workflows/: ci.yml  release.yml
circuits/: README.md  build.sh  package-lock.json  package.json  reserve.circom
circuits/fixtures/: README.md  mock_balance_email.eml  mock_dkim_dns_txt.txt  real_format_balance.eml
circuits/measure/: m_fromregex.circom  m_nullifier.circom  m_regex.circom  m_regex128.circom
circuits/scripts/: gen_contract_fixtures.js  gen_fixtures.js  gen_input.js  gen_poseidon_constants.js  poseidon_crosscheck.js  poseidon_ref.js  serialize.js  vkey_to_soroban.js
contracts/mint_guard/: Cargo.toml  README.md
contracts/mint_guard/scripts/: deploy_init.sh  prove.sh
contracts/mint_guard/src/: fixtures.rs  lib.rs  test.rs
contracts/mint_guard/test_snapshots/test/: prove_reserve_happy_path.1.json  prove_reserve_replay_fails.1.json  prove_reserve_wrong_pubkey_fails.1.json  verify_real_proof_true.1.json
solvent-web/: README.md  index.html  package-lock.json  package.json
solvent-web/src/: App.css  App.tsx  Console.tsx  DarkVeil.tsx  Landing.tsx  index.css  main.tsx  solvent.ts  ui.tsx
