[package]
name = "mint_guard"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned to the latest STABLE soroban-sdk (27.0.0-rc.1 is a release candidate).
# bn254 pairing host functions are in the core SDK; hazmat-crypto exposes the
# Poseidon permutation used by the Task-3 cross-check.
soroban-sdk = { version = "26.1.0", features = ["hazmat-crypto"] }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
